# purifyai

./: .aop.yaml  .gitignore  AUTO-CODE-REVIEW-TASK.md  AUTO-DEBUG-TASK.md  CODE-REVIEW-REPORT.md  CURRENT-WORK.md  DEBUG_COMPLETE.md  INTEGRATION_COMPLETE.md  ONBOARDING.md  PurifyAI智能清理融合方案.md  README.md  TEAM-CONFIG.md  TEST_REPORT.md  agent_auto_runner.py  agent_runner.ps1  agent_runner_v2.py  agent_simple.py  agent_task_dispatcher.py  agent_teams_launcher.py  auto_execute_tasks.py  auto_simple.py  error_log.txt  fix_agent_imports.py  fix_imports.py  fix_utils_imports.py  pyproject.toml  requirements.txt  run.bat  search_iconwidget.py  search_isnull.py  search_mouse_event.py  settings.json  start_agent_teams.py  test_app_simple.py  test_claude.py  test_report_system.py  test_smart_cleanup.db
.aop/hypotheses.json/: hypotheses.json
.aop/learning.json/: learnings.json
.claude/: settings.local.json
data/: whitelist.json
docs/: 快速对接指南.md
project-team-kit/: .gitignore  AGENT-HUB-PAGE-REDESIGN.md  AGENT-TEAMS-CONFIG.md  AGENT-TEAMS-HANDOFF-v2.0.md  AGENT-TEAMS-LAUNCH-GUIDE.md  CLEANUP-SUMMARY.md  CONTEXT-BRIDGE.md  CREATION-SUMMARY.md  DEV-PROGRESS-REPORT-v1.0.md  DEVELOPMENT-GUIDE-v1.0.md  HANDOFF-GUIDE.md  ITERATION-PLAN-v1.0.md  NEXT-ITERATION-PLAN-v1.0.md  PRODUCT-ANALYSIS-v1.0.md  PRODUCT-OPTIMIZATION.md  PROJECT-IDENTITY.md  PROJECT-STATUS.md  PROMPT-STEP1-CREATE-TEAMS.md  PROMPT-STEP2-ASSIGN-TASKS.md  README.md  RELEASE-v0.7.0.md  REPORT_SYSTEM_IMPLEMENTATION_COMPLETE.md  REVIEW-v1.0-DAY1.md  TASK-BACKLOG.md  TEST_SUMMARY.md  WORKFLOW-PROTOCOL.md  install-project-kit.bat  install-project-kit.sh
project-team-kit/tasks/: COMPLEX-INTEGRATION-TEST-TASK.md  COMPREHENSIVE-TEST-TASK.md  P0-6-AI-HEALTH-SCORER.md  P0-7-CLEANUP-STRATEGY-MANAGER.md  P0-8-CLEANUP-SCHEDULER-OPTIMIZATION.md  P0-9-INCREAMENTAL-CLEANUP-OPTIMIZATION.md  P0-AGENT-HUB-REDESIGN.md  P0-AUTO-BACKUP.md  P0-ONE-CLICK-CLEANUP.md  P0-ONE-CLICK-UNDO.md  P0-TESTING-PHASE1.md  P3-1-RULE-EDITOR-BACKEND.md  P3-2-RULE-EDITOR-UI.md  (+1 more)
src/: app.py  cli.py  debug_config.py  error_log.txt  main.py  purifyai_config.json
test-reports/: complex-integration-test-report.md  comprehensive-test-report.md
tests/: INTEGRATION_TEST_REPORT.md  conftest.py  mock_logger.py  mock_pyqt5.py  test_agent_system.py  test_agent_workflow_integration.py  test_ai_analyzer.py  test_ai_health_scorer.py  test_appdata_migration.py  test_backup_manager.py  test_cleanup_agent.py  test_cleanup_history.py  test_cleanup_scheduler.py  test_cleanup_strategy_manager.py  test_execution_engine.py  test_execution_engine_simple.py  test_gui.py  test_import.py  test_incremental_cleanup.py  test_models.py  test_progress_estimator.py  test_recovery_manager.py  test_report_agent.py  test_review_agent.py  test_rule_editor_ui.py  test_rule_engine.py  test_rule_engine_enhanced.py  test_scan_agent.py  test_scanners.py  test_smart_cleaner.py  test_smart_cleanup_ui.py
方案交接包/: 00_交接索引.md  01_MVP实施计划.md  01_MVP实施计划_v1.1.md  PurifyAI智能清理融合方案.md  README.md  审核反馈报告.md  技术档案.md  文档索引.md  方案审核反馈.md  目录结构.md
(+160 files in other folders)
